# my-words

./: .gitignore  README.md  READMEE.md  my-words.code-workspace  package.json
.github/workflows/: deploy.yml  generate-newsletter.yml
newsletters/: homepage.md
newsletters/2025-06-22/: 36kr_raw_2025-06-22.md  36kr_summary_2025-06-22.md  ai_news_2025-06-22.md  ai_news_summary_2025-06-22.md  github_trending_2025-06-22.md  hacker_news_ask_2025-06-22.md  hacker_news_best_2025-06-22.md  hacker_news_frontpage_2025-06-22.md  hacker_news_show_2025-06-22.md  hacker_news_top_comments_2025-06-22.md  newsletter.md  shaoshupai_2025-06-22.md
newsletters/2025-06-23/: 36kr_raw_2025-06-23.md  36kr_summary_2025-06-23.md  ai_news_2025-06-23.md  ai_news_summary_2025-06-23.md  github_trending_2025-06-23.md  hacker_news_ask_2025-06-23.md  hacker_news_best_2025-06-23.md  hacker_news_frontpage_2025-06-23.md  hacker_news_show_2025-06-23.md  hacker_news_top_comments_2025-06-23.md  meituan_2025-06-23.md  newsletter.md  shaoshupai_2025-06-23.md
posts/: categories.json
script/: readme.sh  toc-echo.sh
script/newsletter/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  llm.py  main.py  news_36kr.py  news_ai_news.py  news_github_trending_daily.py  news_go_weekly.py  news_hacker_news.py  news_meituan.py  news_reddit.py  news_shaoshupai.py  news_utils.py  news_v2ex.py  newsletter.py  push.py  pyproject.toml
script/newsletter/tokenizer/: __init__.py  deepseek_tokenizer.py
thoughts/: 202405  202406.md  202408.md  202411  202412  202412.md  202506.md
(+4283 files in other folders)
